--- a/index.html
+++ b/index.html
@@ -96,6 +96,119 @@
 
       </div>
    </section>
+   <!--skill-->
+   <section class=" my-5 bg-light">
+      <div class="container text-center">
+         <div class="row">
+            <h1 class="section-tittle text-center py-5">skill</h1>
+            <div class="col-3">
+               <div class="card skill-card py-3">
+                  <img src="https://cdn-icons-png.flaticon.com/512/1205/1205510.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                     <h5 class="card-title">MongoDB</h5>
+                     <p class="card-text"> Designing and managing NoSQL databases for efficient data storage and
+                        scalability.</p>
+
+                  </div>
+               </div>
+
+            </div>
+            <div class="col-3">
+               <div class="card skill-card py-3">
+                  <img src="https://cdn-icons-png.flaticon.com/512/1183/1183669.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                     <h5 class="card-title">Express js</h5>
+                     <p class="card-text"> Building robust RESTful APIs for seamless backend functionality.</p>
+
+                  </div>
+               </div>
+
+            </div>
+
+            <div class="col-3">
+               <div class="card skill-card py-3">
+                  <img src="https://cdn-icons-png.flaticon.com/512/1260/1260667.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                     <h5 class="card-title">React</h5>
+                     <p class="card-text"> Building robust RESTful APIs for seamless backend functionality.</p>
+
+                  </div>
+               </div>
+
+            </div>
+
+            <div class="col-3">
+               <div class="card skill-card py-3">
+                  <img src="https://cdn-icons-png.flaticon.com/512/5968/5968322.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                     <h5 class="card-title">node js</h5>
+                     <p class="card-text"> Developing high-performance server-side applications.</p>
+
+                  </div>
+               </div>
+
+            </div>
+
+
+         </div>
+
+      </div>
+   </section>
+   <!--Exprience-->
+   <section class="Experience py-5">
+      <div class="container text-center ">
+         <h1 class="section-tittle py-2">Expirence</h1>
+         <div class="row">
+            <div class="col-md-12">
+               <div class="card skill-card py-3">
+                  <div class="card-body">
+                     <h5><b>MERN Stack Developer</b> </h5>
+                     <p><b> HOC Tech Solutions Pvt. Ltd | Sep 2023 - Present</b></p>
+                     <p>Developed and maintained full-stack applications using MERN stack, implemented RESTful APIs,
+                        and optimized database performance for a 20% increase in application efficiency.</p>
+                  </div>
+               </div>
+
+            </div>
+
+         </div>
+
+      </div>
+   </section>
+   <!--contact section -->
+  <div class="container">
+    <div class="row">
+      <h1 class="section-tittle text-center">contact Me</h1>
+      <div class="col-md-6 mb-4">
+        <form class="contact-form">
+          <div class="mb-3">
+            <label for="exampleInputname" class="form-label">Name</label>
+            <input type="name" class="form-control" id="name" aria-describedby="enter your name">
+            <div id="name" class="form-text"> </div>
+          </div>
+          <div class="mb-3">
+            <label for="exampleInput email" class="form-label">Email</label>
+            <input type=" email" class="form-control" id="exampleInput email">
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputmassages" class="form-label">massages</label>
+             <textarea class="form-control" id="massages" rows="5" placeholder="your massage">
+             </textarea>
+          </div>
+           
+          <button type="submit" class="btn btn-primary w-100">Submit</button>
+        </form>
+
+      </div>
+      <div class="col-md-6">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d30473.56021353062!2d74.17008646678632!3d17.306136848280207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1srenuka%20nagar%20saidapur%20karad!5e0!3m2!1sen!2sin!4v1770291074435!5m2!1sen!2sin"
+         width="600" height="450" style="border:0;" allowfullscreen="" 
+        loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+
+      </div>
+    </div>
+  </div>
     
 
    
