--- a/aboutus.html
+++ b/aboutus.html
@@ -36,16 +36,16 @@
                         <a class="nav-link text-white" href=" #">about</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="./skill.html">skill</a>
+                        <a class="nav-link text-white" href=" #">skill</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white " href="./exprience.html">Expirence</a>
+                        <a class="nav-link text-white " href=" #">Expirence</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="./project.html"> project</a>
+                        <a class="nav-link text-white" href=" #"> project</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="./contactus.html"> contact us</a>
+                        <a class="nav-link text-white" href=" #"> contact us</a>
                     </li>
                 </ul>
             </div>
@@ -80,20 +80,7 @@
         </div>
     </div>
     </section>
-    <!--footer-->
-<footer class="footer-section">
-      <div class="container">
-         <p class="text-center text-white  py-2"><strong> © 2025 sakshi shejwal. All Rights Reserved.</strong></p>
-         <div class="  text-center">
-            <p>
-               <a href="https://github.com/sakshishejwal28" target="_blank">
-                  <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub"
-                     class="github-img">
-               </a>
-            </p>
-         </div>
-      </div>
-   </footer>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
