--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet">
-
+   <!--font awsome for icon-->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
    <link rel="stylesheet" href="./index.css" />
 </head>
@@ -160,7 +161,11 @@
          <h1 class="section-tittle py-2">Expirence</h1>
          <div class="row">
             <div class="col-md-12">
-               <div class="card skill-card py-3">
+               <div class="card experience-card py-3">
+
+                  <i class="fa-solid  fa-briefcase ">
+
+                  </i>
                   <div class="card-body">
                      <h5><b>MERN Stack Developer</b> </h5>
                      <p><b> HOC Tech Solutions Pvt. Ltd | Sep 2023 - Present</b></p>
@@ -175,44 +180,92 @@
 
       </div>
    </section>
+   <!--project-->
+   <div class="container my-2">
+      <div class="row">
+         <h1 class="section-tittle text-center ">project</h1>
+         <div class="col-md-4">
+            <div class="card project-card">
+               <img src="https://ym-portfolio-website.netlify.app/images/project%201.png" class="card-img-top"
+                  alt="...">
+               <div class="card-body">
+                  <h5 class="card-title"><b>swami Hospital</b> </h5>
+                  <p class="card-text"> Built a responsive hospital website with clear details on departments, doctors,
+                     and services
+
+                  </p>
+                  <a href="https://swamihospitalkarad.com/" class="btn btn-primary"> view project</a>
+               </div>
+            </div>
+         </div>
+
+         <div class="col-md-4">
+            <div class="card project-card">
+               <img src="https://ym-portfolio-website.netlify.app/images/project2.png" class="card-img-top" alt="...">
+               <div class="card-body">
+                  <h5 class="card-title"><b>Droplets Innovative Incinerators</b> </h5>
+                  <p class="card-text"> Worked with designers to create easy and clean user interfaces.</p>
+                  <a href="https://dropletincinerators.com/" class="btn btn-primary">view project</a>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-4">
+            <div class="card project-card">
+               <img src="https://ym-portfolio-website.netlify.app/images/project3.png" class="card-img-top" alt="...">
+               <div class="card-body">
+                  <h5 class="card-title"><b>Maps civil consultancy LLP</b> </h5>
+                  <p class="card-text">Created user-friendly web pages using HTML, CSS, and JavaScript.</p>
+                  <a href="https://mapscivilconsultancy.com/" class="btn btn-primary">Go somewhere</a>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
    <!--contact section -->
-  <div class="container">
-    <div class="row">
-      <h1 class="section-tittle text-center">contact Me</h1>
-      <div class="col-md-6 mb-4">
-        <form class="contact-form">
-          <div class="mb-3">
-            <label for="exampleInputname" class="form-label">Name</label>
-            <input type="name" class="form-control" id="name" aria-describedby="enter your name">
-            <div id="name" class="form-text"> </div>
-          </div>
-          <div class="mb-3">
-            <label for="exampleInput email" class="form-label">Email</label>
-            <input type=" email" class="form-control" id="exampleInput email">
-          </div>
-          <div class="mb-3">
-            <label for="exampleInputmassages" class="form-label">massages</label>
-             <textarea class="form-control" id="massages" rows="5" placeholder="your massage">
+   <div class="container">
+      <div class="row">
+         <h1 class="section-tittle text-center">contact Me</h1>
+         <div class="col-md-6 mb-4">
+            <form class="contact-form">
+               <div class="mb-3">
+                  <label for="exampleInputname" class="form-label">Name</label>
+                  <input type="name" class="form-control" id="name" aria-describedby="enter your name">
+                  <div id="name" class="form-text"> </div>
+               </div>
+               <div class="mb-3">
+                  <label for="exampleInput email" class="form-label">Email</label>
+                  <input type=" email" class="form-control" id="exampleInput email">
+               </div>
+               <div class="mb-3">
+                  <label for="exampleInputmassages" class="form-label">massages</label>
+                  <textarea class="form-control" id="massages" rows="5" placeholder="your massage">
              </textarea>
-          </div>
-           
-          <button type="submit" class="btn btn-primary w-100">Submit</button>
-        </form>
+               </div>
 
+               <button type="submit" class="btn btn-primary w-100">Submit</button>
+            </form>
+
+         </div>
+         <div class="col-md-6">
+            <iframe
+               src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d30473.56021353062!2d74.17008646678632!3d17.306136848280207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1srenuka%20nagar%20saidapur%20karad!5e0!3m2!1sen!2sin!4v1770291074435!5m2!1sen!2sin"
+               width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+               referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+
+         </div>
       </div>
-      <div class="col-md-6">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d30473.56021353062!2d74.17008646678632!3d17.306136848280207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1srenuka%20nagar%20saidapur%20karad!5e0!3m2!1sen!2sin!4v1770291074435!5m2!1sen!2sin"
-         width="600" height="450" style="border:0;" allowfullscreen="" 
-        loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+   </div>
+   <!--footer-->
+   <footer class="footer-section">
+      <div class="text-center py-2">
+         <h5 class="text-center py-2">© 2025 sakshi shejwal. All Rights Reserved.</h5>
+         <a href="https://github.com/sakshishejwal28" target="_blank">
+            <i class="fab fa-github"></i>
 
+         </a>
       </div>
-    </div>
-  </div>
-    
-
-   
- 
+   </footer>
 
    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
