--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@
       </nav>
    </div>
 
-
-
    <!--hero section-->
    <section class="hero-section">
       <div class="container">
@@ -102,7 +100,7 @@
       <div class="container text-center">
          <div class="row">
             <h1 class="section-tittle text-center py-5">skill</h1>
-            <div class="col-3">
+            <div class="col-md-3 col-sm-6 mb-4">
                <div class="card skill-card py-3">
                   <img src="https://cdn-icons-png.flaticon.com/512/1205/1205510.png" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -114,7 +112,7 @@
                </div>
 
             </div>
-            <div class="col-3">
+            <div class="col-md-3 col-sm-6 mb-4">
                <div class="card skill-card py-3">
                   <img src="https://cdn-icons-png.flaticon.com/512/1183/1183669.png" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -126,7 +124,7 @@
 
             </div>
 
-            <div class="col-3">
+            <div class="col-md-3 col-sm-6 mb-4">
                <div class="card skill-card py-3">
                   <img src="https://cdn-icons-png.flaticon.com/512/1260/1260667.png" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -138,7 +136,7 @@
 
             </div>
 
-            <div class="col-3">
+            <div class="col-md-3 col-sm-6 mb-4">
                <div class="card skill-card py-3">
                   <img src="https://cdn-icons-png.flaticon.com/512/5968/5968322.png" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -215,14 +213,15 @@
                <div class="card-body">
                   <h5 class="card-title"><b>Maps civil consultancy LLP</b> </h5>
                   <p class="card-text">Created user-friendly web pages using HTML, CSS, and JavaScript.</p>
-                  <a href="https://mapscivilconsultancy.com/" class="btn btn-primary">Go somewhere</a>
+                  <a href="https://mapscivilconsultancy.com/" class="btn btn-primary">view project</a>
                </div>
             </div>
          </div>
       </div>
    </div>
    <!--contact section -->
-   <div class="container">
+   <section id="contact" class="py-5"> 
+   <div class="container ">
       <div class="row">
          <h1 class="section-tittle text-center">contact Me</h1>
          <div class="col-md-6 mb-4">
@@ -238,7 +237,7 @@
                </div>
                <div class="mb-3">
                   <label for="exampleInputmassages" class="form-label">massages</label>
-                  <textarea class="form-control" id="massages" rows="5" placeholder="your massage">
+                  <textarea class="form-control" id="massages" rows="6" placeholder="your massage">
              </textarea>
                </div>
 
@@ -246,16 +245,19 @@
             </form>
 
          </div>
-         <div class="col-md-6">
+         <div class="col-md-6 mb-4">
+         <div class="map-container text-center  "> 
             <iframe
                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d30473.56021353062!2d74.17008646678632!3d17.306136848280207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1srenuka%20nagar%20saidapur%20karad!5e0!3m2!1sen!2sin!4v1770291074435!5m2!1sen!2sin"
-               width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+               width="550" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                referrerpolicy="no-referrer-when-downgrade">
             </iframe>
+            </div>
 
          </div>
       </div>
    </div>
+   </section>
    <!--footer-->
    <footer class="footer-section">
       <div class="text-center py-2">
@@ -271,4 +273,4 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 </body>
 
-</html>
+</html> 
