--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
             </form>
 
          </div>
-         <div class="col-md-6 mb-4">
-         <div class="map-container text-center  "> 
+         <div class="col-md-6 mb-4 text-center">
+         <div class="map-container "> 
             <iframe
                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d30473.56021353062!2d74.17008646678632!3d17.306136848280207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1srenuka%20nagar%20saidapur%20karad!5e0!3m2!1sen!2sin!4v1770291074435!5m2!1sen!2sin"
-               width="550" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+               width="580" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                referrerpolicy="no-referrer-when-downgrade">
             </iframe>
             </div>
