--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
    <section id="contact" class="py-5"> 
    <div class="container ">
       <div class="row">
-         <h1 class="section-tittle text-center">contact Me</h1>
+         <h1 class="section-tittle text-center py-2">contact Me</h1>
          <div class="col-md-6 mb-4">
             <form class="contact-form">
                <div class="mb-3">
@@ -249,7 +249,7 @@
          <div class="map-container "> 
             <iframe
                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d30473.56021353062!2d74.17008646678632!3d17.306136848280207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1srenuka%20nagar%20saidapur%20karad!5e0!3m2!1sen!2sin!4v1770291074435!5m2!1sen!2sin"
-               width="580" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+               width="560" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                referrerpolicy="no-referrer-when-downgrade">
             </iframe>
             </div>
